# raghub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  build_backend.py  cleanup.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  evaluate_financebench.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  ruff.toml  setup.py  setup.sh  streamlit_app.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  compose-e2e.yml  labeler.yml  release.yml
.hypothesis/constants/: 02f3d05949782db5  036dd48a9739b1a3  083360624e9c76ec  09908fc810e5bf22  10d05b594edf6983  111aedc51545d8cc  118a32fd36fe0117  13d52c1150f33c20  14c9d560f8572d16  166b19776f723d7c  1b5ef9eede25e663  1d5b4a1e1532fd07  1d60e3aec9fd571a  20911bcfb8c633ac  214d08a613fa3f6f  24028f332a651b20  264d22e97503ec5f  281bbf89798667bd  283191f752019575  29dcdf0142cfe487  2abf8c735c51e896  2bf9cb1dfe53b659  2eefc54eb14775f4  301d9d43e4383df2  319c4b7e9bac5024  31df89df708f51aa  338e440e4d2316b3  33f53da5a4164c1a  3460edc2d28e5a7f  35b773e55935e37f  35f239110fa9c305  3647fb53a01eeb6e  3a373f0ac93644ae  3ad8b06ca9142ff7  3c102feb53a7af10  3c5b0f19792407d8  3d9b5d21df47dbf5  3f50b93aca075db1  43a4cf59ae747b33  43b884710d238ddc  (+105 more)
app/: __init__.py  config.py  container.py  main.py  users.json
app/api/: __init__.py  auth.py  chat.py  dependencies.py
app/embeddings/: __init__.py  embedder.py
app/ingestion/: __init__.py  chunker.py  loader.py  parser.py  run_ingestion.py  sample_data.py
app/llm/: __init__.py  nvidia.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  auth_service.py  chat_service.py  ingestion_service.py  retrieval_service.py
app/storage/: __init__.py  conversation_store.py  metadata_store.py  zvec_store.py
app/ui/: streamlit_app.py
bench/: benchmark.py
config/: development.yaml  production.yaml  staging.yaml
data/: registry.json  sessions.json
database/: init_db.py  rag.db  schema.sql
docs/: api.md  architecture.md  deployment.md  future.md  index.md  migration.md  plugins.md  troubleshooting.md
docs/architecture/: decisions.md  overview.md
docs/guide/: deployment.md  development.md  getting-started.md
docs/operations/: backup.md  monitoring.md  runbook.md  scaling.md
docs/reference/: api.md  configuration.md
examples/: custom_components.py  financebench.py  minimal_pdf_qa.py
raghub/: __init__.py  __init__.py,cover  cli.py  cli.py,cover
raghub/api/: __init__.py  __init__.py,cover  admin.py  admin.py,cover  app.py  app.py,cover  async_runner.py  defaults.py  dependencies.py  dependencies.py,cover  rag.py  rate_limiter.py  rate_limiter.py,cover  response.py  schemas.py  schemas.py,cover
raghub/auth/: __init__.py  __init__.py,cover  rbac.py  service.py  service.py,cover  user_store.py  user_store.py,cover
raghub/cache/: __init__.py  __init__.py,cover
raghub/cli/: __init__.py  __main__.py  _common.py  common.py  eval_cmd.py  ingest_cmd.py  init_cmd.py  main.py  query_cmd.py  rate_limiter.py  run_cmd.py  system.py
raghub/config/: __init__.py  __init__.py,cover  settings.py  settings.py,cover
raghub/conversation/: __init__.py,cover  manager.py  manager.py,cover  memory.py  sliding_window.py  sliding_window.py,cover
raghub/converters/: __init__.py  directory.py  markdown.py  marker.py  plaintext.py
raghub/core/: __init__.py,cover  container.py  container.py,cover  document_state.py  document_state.py,cover  rbac.py  rbac.py,cover
raghub/documents/: __init__.py  __init__.py,cover  chunker.py  chunker.py,cover  lifecycle.py  lifecycle.py,cover  validation.py  validation.py,cover  versioning.py  versioning.py,cover
raghub/domain/: __init__.py  __init__.py,cover  chunk.py  chunk.py,cover  document.py  document.py,cover  repositories.py  repositories.py,cover  session.py  session.py,cover
raghub/embeddings/: __init__.py  __init__.py,cover  base.py  base.py,cover  hashing.py  hashing.py,cover  litellm.py  nvidia.py  nvidia.py,cover  sentence_transformer.py  sentence_transformer.py,cover
raghub/evaluation/: __init__.py  financebench.py  harness.py  metrics.py
raghub/exceptions/: __init__.py  __init__.py,cover
raghub/generation/: __init__.py  generator.py
raghub/ingestion/: __init__.py  __init__.py,cover  background.py  background.py,cover  jobs.py  resumable.py  service.py  service.py,cover
raghub/interfaces/: __init__.py  __init__.py,cover  chunker.py  converter.py  embeddings.py  embeddings.py,cover  evaluation.py  generator.py  knowledge.py  llm.py  llm.py,cover  observability.py  observability.py,cover  pipeline.py  plugin.py  prompts.py  prompts.py,cover  retrieval.py  retrieval.py,cover  storage.py  storage.py,cover  structured.py  vectorstore.py  (+3 more)
requirements/: all.txt  base.txt  dev.txt  ml.txt  observability.txt  parsers.txt
scripts/: build_requirements_lock.py  requirements-constraints.in
tests/: conftest.py  test_api_endpoints.py  test_api_safety.py  test_auth_jwt.py  test_background.py  test_canonical_extras.py  test_canonical_models.py  test_chonkie_chunker.py  test_cli.py  test_cli_commands.py  test_cli_rate_limiter.py  test_components.py  test_container_core.py  test_conversation.py  test_convert_directory.py  test_converters.py  test_converters_chunkers_pipelines.py  test_documents_lifecycle.py  test_documents_validation.py  test_domain_models.py  test_dynamic_application.py  test_edge_cases.py  test_embeddings.py  test_end_to_end.py  test_evaluation.py  test_exceptions.py  test_features.py  test_financebench.py  test_hypothesis_properties.py  test_ingestion.py  test_interfaces.py  test_json_registry.py  test_knowledge.py  test_legacy_services.py  test_litellm_embedding.py  test_litellm_provider.py  test_llm.py  test_marker_converter.py  test_marker_converter_edge_cases.py  test_metrics_routing.py  (+35 more)
(+266 files in other folders)
