[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "retrieval-augmented-generation"
version = "1.0.0"
description = "Production-grade Dynamic RAG framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Quantiphi", email = "[email protected]" }]
keywords = ["rag", "llm", "retrieval", "vector-search"]
classifiers = [
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic~=2.8",
    "pypdf~=5.0",
    "numpy~=1.26",
    "PyYAML~=6.0",
    "marker-pdf~=1.0",
    "chonkie~=0.5",
    "litellm~=1.40",
    "instructor~=1.3",
    "qdrant-client~=1.10",
    "langfuse~=2.0",
    "datasets~=2.20",
    "structlog~=24",
    "prometheus-client~=0.20",
    "opentelemetry-api~=1.25",
]

[project.optional-dependencies]
api = ["fastapi~=0.115", "uvicorn~=0.30", "python-multipart~=0.0.9"]
ui = ["streamlit~=1.37"]
zvec = ["zvec~=0.5.0"]
dev = [
    "pytest~=8.0",
    "reportlab~=4.2",
    "ruff~=0.6",
    "mypy~=1.10",
    "pytest-asyncio~=0.23",
    "types-PyYAML",
]

[project.scripts]
raghub = "raghub.cli.main:main"
raghub-financebench = "raghub.cli.eval_cmd:main"
raghub-benchmark = "bench.benchmark:main"

[project.entry-points."raghub.plugins"]
# A plugin is any class with a ``register(registry)`` method. The
# default registry already exposes every built-in component, so
# the entry-point group is empty by default. Add your own plugins
# here. Example::
#
#   [project.entry-points."raghub.plugins"]
#   my_plugin = "my_package.module:my_plugin_factory"
#

[project.urls]
Homepage = "https://github.com/quantiphi/raghub"
Issues = "https://github.com/quantiphi/raghub/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
