[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrieval-augmented-generation"
version = "0.3.3"
description = "RAGHub — production-grade multi-user retrieval-augmented generation platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "sachin", email = "sachncs@gmail.com" }]
keywords = [
    "rag",
    "raghub",
    "llm",
    "retrieval-augmented-generation",
    "vector-search",
    "fastapi",
    "streamlit",
]
classifiers = [
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.8,<3",
    "pypdf>=5.0,<7",
    "numpy>=1.26,<2",
    "PyYAML>=6.0,<7",
    "marker-pdf>=1.0,<2",
    "chonkie>=0.5,<2",
    "litellm>=1.40,<2",
    "instructor>=1.3,<2",
    "qdrant-client>=1.10,<2",
    "langfuse>=2.0,<5",
    "datasets>=2.20,<6",
    "structlog>=24,<27",
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.25,<2",
    "bcrypt>=4",
    "pyjwt>=2",
    "aiosqlite>=0.19",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
api = ["fastapi>=0.110,<1", "uvicorn>=0.30,<1", "python-multipart>=0.0.9"]
ui = ["streamlit>=1.37,<2"]
zvec = ["zvec>=0.5"]
dev = [
    "pytest>=8.0",
    "reportlab>=4.2",
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "hypothesis>=6",
    "types-PyYAML",
]

[project.scripts]
raghub = "raghub.cli.main:main"
raghub-financebench = "raghub.cli.eval_cmd:main"
raghub-benchmark = "bench.benchmark:main"

[project.entry-points."raghub.plugins"]
# A plugin is any class with a ``register(registry)`` method. The
# default registry already exposes every built-in component, so
# the entry-point group is empty by default. Add your own plugins
# here. Example::
#
#   [project.entry-points."raghub.plugins"]
#   my_plugin = "my_package.module:my_plugin_factory"
#

[project.urls]
Homepage = "https://github.com/sachncs/raghub"
Repository = "https://github.com/sachncs/raghub"
Issues = "https://github.com/sachncs/raghub/issues"
Documentation = "https://github.com/sachncs/raghub/blob/main/docs/index.md"
Changelog = "https://github.com/sachncs/raghub/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["raghub*", "bench*"]
exclude = ["tests*", "data*", "documents*", "examples*", "requirements*", "docs*"]

[tool.setuptools.package-data]
raghub = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/test_hypothesis_properties.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
