[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raghub"
version = "0.4.0"
description = "RAGHub — production-grade multi-user retrieval-augmented generation platform"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Sachin <sachncs@gmail.com>" }]
keywords = [
    "rag",
    "raghub",
    "llm",
    "retrieval-augmented-generation",
    "vector-search",
    "fastapi",
    "streamlit",
]
classifiers = [
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.8,<3",
    "pypdf>=6.0,<7",
    "numpy>=1.26,<3",
    "PyYAML>=6.0,<7",
    "chonkie>=0.5,<2",
    "litellm>=1.40,<2",
    "instructor>=1.3,<2",
    "qdrant-client>=1.10,<2",
    "langfuse>=2.0,<4",
    "datasets>=2.20,<4",
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1",
    "bcrypt>=4",
    "aiosqlite>=0.19,<1",
    "tiktoken>=0.5,<1",
    "beautifulsoup4>=4.12,<5",
    "Pillow>=11,<14",
    "openpyxl>=3.1,<4",
    "python-docx>=1.1,<2",
    "python-pptx>=0.6.21,<1",
    "loguru>=0.7,<1",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
api = ["fastapi>=0.110,<1", "uvicorn[standard]>=0.30,<1", "python-multipart>=0.0.9,<1"]
ui = ["streamlit>=1.37,<2"]
zvec = ["zvec>=0.5,<1"]
pdf = ["marker-pdf>=1.0,<3"]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<7",
    "hypothesis>=6,<7",
    "reportlab>=4.2,<6",
    "ruff>=0.6,<1",
    "mypy>=1.10,<3",
    "types-PyYAML>=6,<7",
    "interrogate>=1.7,<2",
    "mkdocs>=1.5,<2",
    "build>=1.0,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "pip-tools>=7.4,<8",
]

[project.scripts]
raghub = "raghub.cli.main:main"
raghub-financebench = "raghub.cli.eval_cmd:main"
raghub-benchmark = "bench.benchmark:main"

[project.entry-points."raghub.plugins"]
# A plugin is any class with a ``register(registry)`` method. The
# default registry already exposes every built-in component, so
# the entry-point group is empty by default. Add your own plugins
# here. Example::
#
#   [project.entry-points."raghub.plugins"]
#   my_plugin = "my_package.module:my_plugin_factory"
#

[project.urls]
Homepage = "https://github.com/sachncs/raghub"
Repository = "https://github.com/sachncs/raghub"
Issues = "https://github.com/sachncs/raghub/issues"
Documentation = "https://github.com/sachncs/raghub/blob/main/docs/index.md"
Changelog = "https://github.com/sachncs/raghub/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["raghub*", "bench*"]
exclude = ["tests*", "data*", "documents*", "examples*", "requirements*", "docs*"]

[tool.setuptools.package-data]
raghub = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
    "B017",
    "B018",
    "RUF002",
    "RUF003",
    "RUF012",
    "RUF015",
    "RUF043",
    "RUF059",
    "SIM103",
    "SIM105",
    "SIM117",
    "SIM201",
    "UP042",
    "UP047",
]

[tool.ruff.lint.per-file-ignores]
"tests/test_hypothesis_properties.py" = ["E402"]
"tests/test_cli_commands.py" = ["E402", "RUF003", "SIM117"]
"tests/test_production_readiness.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["tests.*", "streamlit_app", "evaluate_financebench"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince20",
]
